css/style.css
    :root {
    --color-dark: #150B0A;
    --color-brown: #3E2D2D;
    --color-beige: #847657;
    --color-green: #385329;
    --color-white: #FFFAEF;
    --color-text: #f5f5f5;
    }



    * {
        box-sizing: border-box;
        margin: 0;
        padding: 0;
    }



body {
        background-image: url('../media/img/Fondo_MonsterHunterWorld.jpg'); /* Image URL */
        background-size: cover; /* Scale image to cover entire area */
        background-position: center; /* Center the image */
        background-repeat: no-repeat; /* Prevent tiling */
        background-attachment: fixed; /* Keep image fixed during scroll */

        font-family: "Open Sans", sans-serif;
}
/* Fuentes */
h1 {
    font-family: "Noto Serif", serif;
    font-optical-sizing: auto;
    font-weight: 800;
    font-style: normal;
}
h5 {
    font-family: "Noto Serif", serif;
    font-optical-sizing: auto;
    font-weight: 800;
    font-style: normal;
}
h6 {
    font-family: "Noto Serif", serif;
    font-optical-sizing: auto;
    font-weight: 800;
    font-style: normal;
}

/* Fontawesome social icons */

a > i{
    font-size: 1.7rem;
    color: #f5f5f5;
    transition: 300ms;
}
a > i:hover{
    color: #150B0A;
    transition: 300ms;
}

/* POSICIONAMIENTO DE LAS IMAGENES PARA UTILIZAR GSAP */
.img-monster {
  width: 100%;
  opacity: 0;
  transform: rotate(-20deg) scale(1);
}
.img-monster2 {
  width: 100%;
  opacity: 0;
  transform: rotate(20deg) scale(1);
}


/* ----------------------------------------------- */
.banner{
  height: 300px;      
  overflow: hidden;
}

.IMGheader {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.searchButton {
    display: flex;
    justify-content: center;
    margin: 20px 0;
}

/* <<<<<<< HEAD */
h1 {
    color:#f5f5f5;

}
.Monster_Grid {
    top: auto;
    background-color: var(--color-dark);
    row-gap: inherit;
    border-radius: 10px;
    overflow: hidden;
    /* margin:auto;  */
    margin-bottom: 2rem;
}

/* .card {
    --bs-card-bg: var(--color-brown);
    color: var(--color-text);
} */

.dropdown-item.active {
    background-color: #146c43;
}

.dropdown-menu.show {
    background-color: #104b2f;
}

.monster-img{
    height: 200px;
    width: 100%;
    object-fit: contain;
}
/*======= */
h1 {
  color: white;

}

.d-flex-text-start-my-4a-lign-items-start{
    left: 10%;
}

.infBox p[class*="lead"] {
    padding: 1rem 2rem;
    min-height: 200%;
    background: url("../media/img/Caja_Horizontal.png") no-repeat center;
    background-size: 100% 100%; 
    border: none;
    color: rgb(230, 230, 230);
    
}

.custom-btn {
  padding: 30px 20px; /* tamaño del botón */
  color: var(--color-dark);
  background: url("../media/img/Boton.png") no-repeat center;
  background-size: contain;
  border: none;
   
}

/* Caja de textos personalizados monsterEdex*/
.user-card {
  background: url("../media/img/Caja_grande.png") no-repeat center;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  position: relative;
  overflow: hidden;
   flex-grow: 1;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  text-align: center;
    transform: translateY(-20px);
    color:  rgb(230, 230, 230);
}


/* Caja de textos personalizados WikiMonster */
.card {
  background-image: url("../media/img/Caja_grande.png");
  background-size: 100% 100%;
  background-repeat: no-repeat;
  filter: drop-shadow(0 15px 5px #00000077);
}

.card-body{
    transition: 500ms;
    text-shadow: 0 5px 1px #00000077;
}

.card-body:hover{
    color: #847657;
    text-shadow: 0 3px 0 #00000077;
    transition: 500ms;
}

.custom-search-bottom{
    padding: 10px 20px; /* tamaño del botón */
  color: var(--color-dark);
  background: url("../media/img/Boton_horizontal.png") no-repeat center;
  background-size: contain;
  border: none;
  margin-top: 20px;
}
.card-body .custom-navbar {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  text-align: center;
  background-image: url("../media/img/Caja_Horizontal.png");
}
 /* .card-body {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  text-align: center;
    transform: translateY(-20px);
    color:  rgb(230, 230, 230);
}  */
/* .InputNav{
    background-color: #c3ae85;
    border: 0;
}
.InputNav:focus{
    color: rgb(40, 55, 67);
} */
.form-control{
    background-color: antiquewhite;
    border:0;
    transition: 500ms;
}
.form-control:focus{
    color: var(--bs-body-color);
    background-color: rgb(189, 171, 148);
    outline: 0;
    box-shadow: 0 0 0 .20rem rgba(220, 214, 183, 0.25);
    transition: 500ms;
}

.custom-navbar{
    background-color: var(--color-brown);
    color: var(--color-text);
}

.custom-search{
    padding: 10px 20px; /* tamaño del botón */
  color: var(--color-dark);
  background: url("../media/img/Boton.svg") no-repeat center;
  background-size: contain;
  border: none;
}

.col-md-10 p {
  transform: translateY(40px);
}



.container-fluid .btn{
    margin-bottom: 50px;  
    cursor: pointer; 
}

.bottonback{

    height: 50%;
    width: 10%;
}

.imgWikiMonster{
    width: 100%;
    height: 50%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    padding: 10px;
}

/* Footer logo */

.footerLogo{
    width: 100%;
    max-width: 261px;
    height: auto;
}

/* Loading screen */
.preload {
    overflow: hidden;
}
.loader-wrapper{
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
    background-color: #3E2D2D;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 2;
}

.Loading{
    display: flex;
    gap: 12px;
}

.Loading div {
    width: 1rem;
    height: 1rem;
    background: #FFFAEF;
    border-radius: 50%;
    box-shadow: 0 -0.4rem rgba(60, 0, 80, 0.1)
    inset;

    animation: cycle 1s ease-in-out infinite;
}

.Loading div:nth-child(1){
    animation-delay: 0;
}
.Loading div:nth-child(2){
    animation-delay: 0.2s;
}
.Loading div:nth-child(3){
    animation-delay: 0.4s;
}
@keyframes cycle {
    0%{
        transform: translateY(0);
    }
    50%{
        transform: translateY(1rem);
    }
    100%{
        transform: translateY(0);
    }    
}

/* Nav */
.Links{
    color: rgb(174, 152, 123);
    font-size: 18px;
    font-weight: bold;
    text-decoration: none;
    transition: 500ms;
}
.Links:hover{
    color: antiquewhite;
    font-size: 18px;
    font-weight: bold;
    text-decoration: none;
    transition: 500ms;
}

.btn{
    color: antiquewhite;
    background-color: rgb(67, 36, 19);
    border: 0;
    cursor: pointer;
    box-shadow: 0 5px #1d1d1d4d;
}
.btn:hover{
    color: rgb(174, 152, 123);
    background-color: rgb(67, 36, 19);
    border: 0;
    cursor: pointer;
    box-shadow: 0 1px #1d1d1d4d;
}

/* Drop down */

.btn-check:checked+.btn, .btn.active, .btn.show, .btn:first-child:active, :not(.btn-check)+.btn:active{
    color: rgb(174, 152, 123);
    background-color: #432413;
    transition: 500ms;
}
.dropdown-menu.show {
    background-color: #432413;
}

/* Ham Menu */
/* Off-screen Menu Styling */
.off-screen-menu {
    background-color: #3E2D2D;
    height: 100vh;
    width: 100%;
    max-width: 100%;
    position: fixed;
    top: 0;
    right: -200vw; /* Hidden by default */
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    font-size: 2rem;
    transition: .3s ease;
    z-index: 1000;
}

.off-screen-menu.active {
    right: 0; /* Slides in */
}

/* Burger Icon Styling */
.ham-menu {
    color: #146c43;
    height: 50px;
    width: 40px;
    position: relative;
    cursor: pointer;
    z-index: 1001; /* Above the menu */
}

.ham-menu span {
    height: 5px;
    width: 100%;
    background-color: rgb(174, 152, 123);
    border-radius: 10px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    transition: .3s ease;
}
.ham-menu:hover span{
    background-color: antiquewhite;
}

/* Burger Animation to 'X' */
.ham-menu span:nth-child(1) { top: 25%; }
.ham-menu span:nth-child(3) { top: 75%; }

.ham-menu.active span:nth-child(1) {
    top: 50%;
    transform: translate(-50%, -50%) rotate(45deg);
}
.ham-menu.active span:nth-child(2) { opacity: 0; }
.ham-menu.active span:nth-child(3) {
    top: 50%;
    transform: translate(-50%, -50%) rotate(-45deg);
}

/* List cleaning */
.off-screen-menu ul {
    list-style: none;
    padding: 0;
}
.off-screen-menu a {
    color: rgb(174, 152, 123);
    font-size: 1.5rem;
    font-weight: bold;
    text-decoration: none;
    transition: 500ms;
}
.off-screen-menu a:hover {
    color: antiquewhite;
    font-size: 1.5rem;
    font-weight: bold;
    text-decoration: none;
    transition: 500ms;
}
.off-screen-menu{
    gap: 2rem;
}

